--- a/media.css
+++ b/media.css
@@ -91,7 +91,7 @@
 
     .page1{
         height: 100%;
-        background-position: center;
+        background-position: left;
     }
 
     main >h1{
@@ -146,5 +146,9 @@
 
     .dish1{
         gap: 10px;
+    }
+
+    nav .mid h1{
+        font-size: 2.5vw;
     }
 }
